# EAG4

./: .env  .gitignore  101.ipynb  README.md  app.py  pyproject.toml
static/css/: style.css
static/js/: app.js
templates/: index.html
