[project]
name = "class-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "werkzeug>=3.0.0",
    "google-generativeai>=0.3.0",
    "python-dotenv>=1.0.0"
]
